# Best-Approximation-Polynomial-BAP---BOB3-

./: Best Approximation Polynomial (BAP - BOB3).sln  readme.md
Best Approximation Polynomial (BAP - BOB3)/: Best Approximation Polynomial (BAP - BOB3).cpp  Best Approximation Polynomial (BAP - BOB3).vcxproj  Best Approximation Polynomial (BAP - BOB3).vcxproj.filters  CMakeLists.txt  F.txt  Fmesh.txt  L.txt  Resudial.txt  X.txt  mesh.txt  plot.py
